[gd_scene load_steps=5 format=3 uid="uid://cjgijbfxixe67"]

[ext_resource type="Script" path="res://sources/gui/Login.gd" id="2_2pjk7"]
[ext_resource type="PackedScene" uid="uid://3ldimch2l6rv" path="res://presets/gui/Scrollable.tscn" id="3_6esv8"]
[ext_resource type="JSON" path="res://data/db/news.json" id="4_dyd78"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tk56e"]

[node name="Login" type="MarginContainer"]
custom_minimum_size = Vector2(540, 0)
offset_right = 540.0
offset_bottom = 239.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("2_2pjk7")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"DialogueBox"

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
metadata/_edit_use_custom_anchors = true

[node name="Label" type="Label" parent="Panel/Margin/VBoxContainer"]
layout_mode = 2
text = "Source of Mana"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GridContainer" type="GridContainer" parent="Panel/Margin/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="Panel/Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Name"
vertical_alignment = 1

[node name="NameContainer" type="PanelContainer" parent="Panel/Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameText" type="LineEdit" parent="Panel/Margin/VBoxContainer/GridContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../../PasswordContainer/PasswordText")
focus_mode = 1
max_length = 255
clear_button_enabled = true
caret_blink = true
caret_blink_interval = 0.5

[node name="PasswordLabel" type="Label" parent="Panel/Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Password"
vertical_alignment = 1

[node name="PasswordContainer" type="PanelContainer" parent="Panel/Margin/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PasswordText" type="LineEdit" parent="Panel/Margin/VBoxContainer/GridContainer/PasswordContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_previous = NodePath("../../NameContainer/NameText")
focus_mode = 1
max_length = 255
clear_button_enabled = true
select_all_on_focus = true
caret_blink = true
caret_blink_interval = 0.5
secret = true

[node name="OnlineIndicator" type="CheckBox" parent="Panel/Margin/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PearlBox"
disabled = true

[node name="HSeparator2" type="HSeparator" parent="Panel/Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Scrollable" parent="Panel/Margin/VBoxContainer" instance=ExtResource("3_6esv8")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tk56e")
jsonFile = ExtResource("4_dyd78")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
